tests/tests/errors/30203-1.vb
'#compiler-message:30203-1.vb(7:14) : error BC30203: Identifier expected.
'#exit-code:1

Module Test

    Public Sub Main()
        Dim [ As String
    end Sub
    
End Module